Updated bg colour and accordion style

--- a/new-request/index.html
+++ b/new-request/index.html
@@ -18,7 +18,7 @@ title: EHC Hub
         {% include actions-new-request.html %}
 
         <div class="accordion" id="accordionExample">
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
                 <span class="me-3">1.</span>Consent
@@ -39,7 +39,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                 <span class="me-3">2.</span>Details of person requesting an EHC needs assessment
@@ -51,7 +51,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                 <span class="me-3">3.</span>Child or young person's details
@@ -63,7 +63,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                 <span class="me-3">4.</span>Child or young person's main contacts (family and involved professionals)
@@ -75,7 +75,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                 <span class="me-3">5.</span>Current education setting(s)
@@ -87,7 +87,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                 <span class="me-3">6.</span>Previous setting(s)
@@ -99,7 +99,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
                 <span class="me-3">7.</span>Important information about the child or young person
@@ -111,7 +111,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
                 <span class="me-3">8.</span>Views of the child or young person and their parent, carer or guardian
@@ -123,7 +123,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
                 <span class="me-3">9.</span>Identified special educational needs (SEN)
@@ -135,7 +135,7 @@ title: EHC Hub
               </div>
             </div>
           </div>
-          <div class="accordion-item my-5">
+          <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
                 <span class="me-3">10.</span>Supporting documents
