Added SEN2 report page.

--- a/reports/index.html
+++ b/reports/index.html
@@ -22,7 +22,7 @@ title: Reporting
             <a class="nav-link active" aria-current="page" href="#">Standard exports</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">SEN2</a>
+            <a class="nav-link" href="/reports/sen2">SEN2</a>
           </li>
         </ul>
 
