Minor button and link changes

--- a/anon/about-2.html
+++ b/anon/about-2.html
@@ -30,7 +30,7 @@ title: Request step 2
         <p>The local authority must reply within 6 weeks. They will always reply to you as a parent or young person – even where the request was made by the school or college.</p>
 
         <div class="d-flex justify-content-between">
-          <a href="/anon" class="btn btn-light"><i class="fal fa-arrow-circle-left me-2"></i>Back</a>
+          <a href="/anon" class="btn btn-neutral-50 me-2"><i class="fal fa-arrow-circle-left me-2"></i>Back</a>
           <a href="/anon/anon-request" class="btn btn-primary"><i class="fal fa-arrow-circle-right me-2 text-white"></i>Request an EHC needs assessment</a>
         </div>
 
