--- a/anon/anon-request.html
+++ b/anon/anon-request.html
@@ -25,7 +25,7 @@ title: Request for assessment
         <hr>
 
         <div class="d-flex justify-content-end">
-          <a href="/index" class="btn btn-light me-2"><i class="fal fa-times-circle me-2"></i>Cancel</a>
+          <a href="/index" class="btn btn-neutral-50 me-2"><i class="fal fa-times-circle me-2"></i>Cancel</a>
           <a href="/anon/thank-you" class="btn btn-primary"><i class="fal fa-paper-plane me-2 text-white"></i>Send request</a>
         </div>
 
