--- a/anon/index.html
+++ b/anon/index.html
@@ -25,7 +25,7 @@ title: Request step 1
         <p>An EHC plan can only be issued after a child or young person has gone through the process of EHC needs assessment. At the end of that process, the local authority has to make a decision to issue to issue an EHC Plan or not.</p>
 
         <div class="d-flex justify-content-between">
-          <a href="/index" class="btn btn-light"><i class="fal fa-arrow-circle-left me-2"></i>Back</a>
+          <a href="/index" class="btn btn-neutral-50 me-2"><i class="fal fa-arrow-circle-left me-2"></i>Back</a>
           <a href="/anon/about-2" class="btn btn-primary"><i class="fal fa-arrow-circle-right me-2 text-white"></i>Request an EHC needs assessment</a>
         </div>
 
