--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -35,9 +35,9 @@ title: EHC Hub
             <ul class="dropdown-menu">
               <li><a class="dropdown-item" href="#">Request</a></li>
               <li><a class="dropdown-item" href="#">Decision</a></li>
-              <li><a class="dropdown-item" href="#">Assessment</a></li>
+              <li><a class="dropdown-item" href="/case-view/assessment">Assessment</a></li>
               <li><a class="dropdown-item" href="#">Decision</a></li>
-              <li><a class="dropdown-item" href="#">EHC Plan</a></li>
+              <li><a class="dropdown-item" href="/case-view">EHC Plan</a></li>
             </ul>
           </div>
         </div>
