Added review pathway progress steps

--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -77,7 +77,7 @@ title: Work tray
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
-                     <td><a href="#">Wagner, Victor</a></td>
+                     <td><a href="/case-view/views">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
                      <td>Review: Contribute views</td>
