--- a/case-view/assessment.html
+++ b/case-view/assessment.html
@@ -21,7 +21,7 @@ title: EHC Hub
 
   {% include sidenav-case.html %}
 
-  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
+  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8 table-case">
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col">
 
@@ -49,9 +49,8 @@ title: EHC Hub
         {% include actions-assessment.html %}
 
         <!-- Requests for advice -->
-        <div class="mb-5">
+        <div class="mb-5 table-responsive">
           <h2>Requests for advice</h2>
-          <div class="table-responsive">
            <table class="table table-striped table-hover table-borderless idx-results-table align-middle mt-0">
              <thead>
                <tr>
@@ -100,6 +99,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="no-wrap">
                    <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
                  </td>
                </tr>
                <tr>
@@ -116,7 +116,6 @@ title: EHC Hub
                </tr>
              </tbody>
            </table>
-         </div>
          <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
            <a class="btn btn-neutral-50" href="#"><i class="fal fa-plus-circle me-2"></i>Add request</a>
          </div>
