--- a/case-view/views.html
+++ b/case-view/views.html
@@ -21,7 +21,7 @@ title: EHC Hub
 
   {% include sidenav-case-alt.html %}
 
-  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
+  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8 table-case">
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col">
 
@@ -50,9 +50,8 @@ title: EHC Hub
         {% include actions-views.html %}
 
         <!-- Requests for information -->
-        <div class="mb-5">
+        <div class="mb-5 table-responsive">
           <h2>Requests for information</h2>
-          <div class="table-responsive">
            <table class="table table-striped table-hover table-borderless idx-results-table align-middle mt-0">
              <thead>
                <tr>
