--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -8,7 +8,7 @@ title: Work tray
 
   {% include sidenav.html %}
 
-  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8">
+  <main id="content" class="main container-fluid mt-6 px-6 px-lg-8 table-no-case">
     <div class="row gx-5 gy-2 px-xl-5">
       <div class="col">
         <h1>My cases in progress</h1>
