--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -37,7 +37,7 @@ title: EHC Hub
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
                   <span>Max Schneider</span>
-                  <span>July 12, 2023 11:49</span>
+                  <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
                   Updated Ellery's details.
@@ -53,7 +53,7 @@ title: EHC Hub
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
                   <span>Max Schneider</span>
-                  <span>July 12, 2023 11:49</span>
+                  <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
                   Updated Ellery's details.
@@ -69,7 +69,7 @@ title: EHC Hub
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
                   <span>Max Schneider</span>
-                  <span>July 12, 2023 11:49</span>
+                  <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
                   Updated Ellery's details.
@@ -85,7 +85,7 @@ title: EHC Hub
 
                 <li class="list-group-item timeline-header d-flex justify-content-between">
                   <span>Max Schneider</span>
-                  <span>July 12, 2023 11:49</span>
+                  <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
                   Updated Ellery's details.
