--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -40,7 +40,7 @@ title: Work tray
                      <td><a href="#">Hanson, Alvin</a></td>
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td>Highfield Academy</td>
-                     <td>Assessment in progress</td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A needs assessment is in progress">Assessment</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
@@ -49,12 +49,12 @@ title: Work tray
                      <td><a href="/case-view">Holden, Ellery</a></td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td>Oak Junior School</td>
-                     <td>Draft EHC Plan</td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A draft EHC Plan is in writing">Plan writing</span></td>
                      <td class="d-none d-md-table-cell">14 Jan 2023</td>
                      <td class="d-none d-md-table-cell">
-                       <span class="badge rounded-pill bg-warning-300 text-dark">Pending deadline</span>
-                       <span class="badge rounded-pill bg-error-600" title="Safeguarding concern">SG</span>
-                       <span class="badge rounded-pill bg-success-700" title="Looked after child">LAC</span>
+                       <span class="badge rounded-pill bg-warning-300 text-dark" data-bs-toggle="tooltip" data-bs-title="Next due date is pending">Pending deadline</span>
+                       <span class="badge rounded-pill bg-error-600" title="Safeguarding concern" data-bs-toggle="tooltip" data-bs-title="Safeguarding">SG</span>
+                       <span class="badge rounded-pill bg-success-700" title="Looked after child" data-bs-toggle="tooltip" data-bs-title="Looked after child">LAC</span>
                      </td>
                    </tr>
                    <tr>
@@ -62,7 +62,7 @@ title: Work tray
                      <td><a href="#">Reid, Sienna</a></td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td>St Mary's Primary</td>
-                     <td>Review: Report</td>
+                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is in writing">Amendment writing (OR)</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
@@ -71,16 +71,16 @@ title: Work tray
                      <td><a href="#">Tate, Chandler</a></td>
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td>Greenhill School</td>
-                     <td>Request for assessment</td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="Information gathering following a request for assessment">Information gathering</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
-                     <td class="d-none d-md-table-cell"><span class="badge rounded-pill bg-danger">Overdue deadline</span></td>
+                     <td class="d-none d-md-table-cell"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-title="Next due date is overdue">Overdue deadline</span></td>
                    </tr>
                    <tr>
                      <td class="d-none d-md-table-cell"><img src="/assets/images/placeholder.jpeg" class="rounded d-block idx-avatar-card" alt="Photo of Victor"></td>
                      <td><a href="/case-view/views">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
-                     <td>Review: Contribute views</td>
+                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="Contribute views ahead of a review meeting">Contribute views</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
