--- a/case-view/views.html
+++ b/case-view/views.html
@@ -69,9 +69,9 @@ title: EHC Hub
                  <td>SENCo</td>
                  <td>Education</td>
                  <td></td>
-                 <td><span class="badge text-bg-warning w-100">Pending</span></td>
+                 <td></td>
                  <td class="no-wrap">
-                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-times-circle me-1"></i>Close</a>
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-paper-plane me-1"></i>Request information</a>
                  </td>
                </tr>
                <tr>
@@ -106,9 +106,6 @@ title: EHC Hub
                </tr>
              </tbody>
            </table>
-         </div>
-         <div class="d-flex justify-content-lg-end mt-2 mt-lg-0">
-           <a class="btn btn-neutral-50" href="#"><i class="fal fa-plus-circle me-2"></i>Add request</a>
          </div>
        </div>
 
