--- a/case-view/timeline.html
+++ b/case-view/timeline.html
@@ -56,7 +56,7 @@ title: EHC Hub
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
-                  Updated Ellery's details.
+                  Requested information ahead of a review meeting from Educational Psychology Team. A notification email was sent to <a href="mailto:inbox@educational-psychcology.org">inbox@educational-psychcology.org</a>
                 </li>
               </ul>
             </div>
@@ -72,7 +72,7 @@ title: EHC Hub
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
-                  Updated Ellery's details.
+                  Invited Helen Glass to a review meeting. A notification email was sent to <a href="mailto:helen.glass@example.com">helen.glass@example.com</a>
                 </li>
               </ul>
             </div>
@@ -88,7 +88,23 @@ title: EHC Hub
                   <span>12 Jul 2023 11:49</span>
                 </li>
                 <li class="list-group-item">
-                  Updated Ellery's details.
+                  Started a review of Ellery's EHC Plan.
+                </li>
+              </ul>
+            </div>
+          </li>
+
+          <li>
+            <span class="fa-li"><i class="fa fa-circle"></i></span>
+            <div class="card">
+              <ul class="list-group list-group-flush">
+
+                <li class="list-group-item timeline-header d-flex justify-content-between">
+                  <span>Max Schneider</span>
+                  <span>12 Jul 2023 11:49</span>
+                </li>
+                <li class="list-group-item">
+                  Imported Ellery's EHC Plan.
                 </li>
               </ul>
             </div>
