--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -49,7 +49,7 @@ title: Work tray
                      <td><a href="/case-view">Holden, Ellery</a></td>
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td>Oak Junior School</td>
-                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A draft EHC Plan is in writing">Plan writing</span></td>
+                     <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A draft EHC Plan is in writing">EHCP writing</span></td>
                      <td class="d-none d-md-table-cell">14 Jan 2023</td>
                      <td class="d-none d-md-table-cell">
                        <span class="badge rounded-pill bg-warning-300 text-dark" data-bs-toggle="tooltip" data-bs-title="Next due date is pending">Pending deadline</span>
@@ -80,7 +80,7 @@ title: Work tray
                      <td><a href="/case-view/views">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
-                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="Contribute views ahead of a review meeting">Contribute views</span></td>
+                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and gathering views">Review arranged</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
