--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -20,7 +20,7 @@ title: Work tray
          <div class="col">
 
              <!-- Search results -->
-             <p class="mb-0"><strong>1 - 5</strong> of <strong>5</strong> children and young people based on your current search and filter options.</p>
+             <p class="mb-0"><strong>1 - 5</strong> of <strong>15</strong> children and young people based on your current search and filter options.</p>
              <div class="table-responsive">
                <table class="table table-hover table-borderless idx-results-table align-middle">
                  <thead>
@@ -62,7 +62,7 @@ title: Work tray
                      <td><a href="#">Reid, Sienna</a></td>
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td>St Mary's Primary</td>
-                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is in writing">Amendment writing (OR)</span></td>
+                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is in writing">Amendment writing</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
@@ -80,7 +80,7 @@ title: Work tray
                      <td><a href="/case-view/views">Wagner, Victor</a></td>
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
-                     <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and gathering views">Review arranged</span></td>
+                     <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and gathering views">Review arranged</span></td>
                      <td class="d-none d-md-table-cell">17 Apr 2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
@@ -88,7 +88,15 @@ title: Work tray
                </table>
              </div>
 
-             <p class="mt-7"><a href="/parent-dash"><i class="fal fa-eye me-2"></i>Parent dashboard</a></p>
+             <nav aria-label="Results navigation">
+                <ul class="pagination justify-content-center my-5">
+                  <li class="page-item active"><a class="page-link" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link" href="#">3</a></li>
+                  <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-right"></i></a></li>
+                  <li class="page-item"><a class="page-link" href="#"><i class="fal fa-chevron-double-right"></i></a></li>
+                </ul>
+              </nav>
 
            </div>
          </div>
