Added icon to download links in reporting area

--- a/reports/index.html
+++ b/reports/index.html
@@ -41,73 +41,73 @@ title: Reporting
                <td>Assessment and planning</td>
                <td class="d-none d-md-table-cell">Key information from the assessment and planning pathway.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Education settings</td>
                <td class="d-none d-md-table-cell">Details of all education settings in the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Cases</td>
                <td class="d-none d-md-table-cell">Key information for every case.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Panel meetings</td>
                <td class="d-none d-md-table-cell">Details of all panel meetings.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Plans</td>
                <td class="d-none d-md-table-cell">All draft and issued EHC Plans in the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Requests for advice</td>
                <td class="d-none d-md-table-cell">Details of every request for advice.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Requests for information</td>
                <td class="d-none d-md-table-cell">Details of all requests for information ahead of a review meeting.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Reviews</td>
                <td class="d-none d-md-table-cell">Every review of an EHC Plan carried out on the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Setting consultations</td>
                <td class="d-none d-md-table-cell">Details of all education setting consultations for draft and proposed amended EHC Plans.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Subjects</td>
                <td class="d-none d-md-table-cell">All children and young people in the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Teams</td>
                <td class="d-none d-md-table-cell">Details of all teams of professionals in the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
              <tr>
                <td>Users</td>
                <td class="d-none d-md-table-cell">Details of every user account in the Hub.</td>
                <td>CSV</td>
-               <td><a href="#">Download</a></td>
+               <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
              </tr>
            </tbody>
          </table>
