--- a/reports/sen2.html
+++ b/reports/sen2.html
@@ -49,7 +49,7 @@ title: Reporting
                  <tr>
                    <td>sen2_data_export.csv</td>
                    <td>28 June 2023 17:20</td>
-                   <td><a href="#">Download</a></td>
+                   <td class="no-wrap"><a href="#"><i class="fal fa-file-download me-1"></i>Download</a></td>
                  </tr>
                </tbody>
              </table>
