Updated read more link style

--- a/case-view/views.html
+++ b/case-view/views.html
@@ -45,7 +45,7 @@ title: EHC Hub
 
         <h1 class="no-border">Contribute views</h1>
         <p>This page allows you to request information from involved professionals, teams or organisations invited to the EHC Plan review meeting. To allow sufficient time for a response, it is advised the request for information is made at least 6 weeks prior to the scheduled meeting.</p>
-        <p>It is an opportunity to consult on how progress is being made towards the outcomes set out in the current EHC Plan, and to gather any updated information, reports or assessments ahead of the meeting. <a href="#">Read more</a></p>
+        <p>It is an opportunity to consult on how progress is being made towards the outcomes set out in the current EHC Plan, and to gather any updated information, reports or assessments ahead of the meeting. <a href="#" class="idox-more-link">read more <i class="fal fa-angle-double-right"></i></a></p>
 
         {% include actions-views.html %}
 
@@ -92,6 +92,7 @@ title: EHC Hub
                  <td><span class="badge text-bg-success w-100">Completed</span></td>
                  <td class="no-wrap">
                    <a href="#" title="Edit user" class="me-3"><i class="fal fa-redo me-1"></i>Re-open</a>
+                   <a href="#" title="Edit user" class="me-3"><i class="fal fa-file-alt me-1"></i>Read</a>
                  </td>
                </tr>
                <tr>
