--- a/new-request/index.html
+++ b/new-request/index.html
@@ -13,7 +13,7 @@ title: EHC Hub
       <div class="col">
 
         <h1>Request an EHC needs assessment</h1>
-        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#">More...</a></p>
+        <p>Complete and submit the form on this page to request an EHC needs assessment for a child or young person (0 - 25 years). The request can be completed in part and returned to at a later time. The local authority will not be able to see your request until you choose to submit it. <a href="#" class="idox-more-link">read more <i class="fal fa-angle-double-right"></i></a></p>
 
         {% include actions-new-request.html %}
 
@@ -21,7 +21,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="false" aria-controls="collapseOne">
-                <span class="me-3">1.</span>Consent
+                Consent
               </button>
             </h2>
             <div id="collapseOne" class="accordion-collapse collapse">
@@ -42,7 +42,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                <span class="me-3">2.</span>Details of person requesting an EHC needs assessment
+                <span class="me-3">1.</span>Details of person requesting an EHC needs assessment
               </button>
             </h2>
             <div id="collapseTwo" class="accordion-collapse collapse">
@@ -54,7 +54,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                <span class="me-3">3.</span>Child or young person's details
+                <span class="me-3">2.</span>Child or young person's details
               </button>
             </h2>
             <div id="collapseThree" class="accordion-collapse collapse">
@@ -66,7 +66,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
-                <span class="me-3">4.</span>Child or young person's main contacts (family and involved professionals)
+                <span class="me-3">3.</span>Child or young person's main contacts (family and involved professionals)
               </button>
             </h2>
             <div id="collapseFour" class="accordion-collapse collapse">
@@ -78,7 +78,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
-                <span class="me-3">5.</span>Current education setting(s)
+                <span class="me-3">4.</span>Current education setting(s)
               </button>
             </h2>
             <div id="collapseFive" class="accordion-collapse collapse">
@@ -90,7 +90,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
-                <span class="me-3">6.</span>Previous setting(s)
+                <span class="me-3">5.</span>Previous setting(s)
               </button>
             </h2>
             <div id="collapseSix" class="accordion-collapse collapse">
@@ -102,7 +102,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
-                <span class="me-3">7.</span>Important information about the child or young person
+                <span class="me-3">6.</span>Important information about the child or young person
               </button>
             </h2>
             <div id="collapseSeven" class="accordion-collapse collapse">
@@ -114,7 +114,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
-                <span class="me-3">8.</span>Views of the child or young person and their parent, carer or guardian
+                <span class="me-3">7.</span>Views of the child or young person and their parent, carer or guardian
               </button>
             </h2>
             <div id="collapseEight" class="accordion-collapse collapse">
@@ -126,7 +126,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseNine" aria-expanded="false" aria-controls="collapseNine">
-                <span class="me-3">9.</span>Identified special educational needs (SEN)
+                <span class="me-3">8.</span>Identified special educational needs (SEN)
               </button>
             </h2>
             <div id="collapseNine" class="accordion-collapse collapse">
@@ -138,7 +138,7 @@ title: EHC Hub
           <div class="accordion-item">
             <h2 class="accordion-header">
               <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTen" aria-expanded="false" aria-controls="collapseTen">
-                <span class="me-3">10.</span>Supporting documents
+                <span class="me-3">9.</span>Supporting documents
               </button>
             </h2>
             <div id="collapseTen" class="accordion-collapse collapse">
