Changed date format for tables

--- a/admin/admin-users.html
+++ b/admin/admin-users.html
@@ -40,7 +40,7 @@ title: Users
                <td class="text-muted">alice@example.com</td>
                <td class="text-muted">Setting admin</td>
                <td><span class="badge text-bg-danger w-100">Suspended</span></td>
-               <td class="text-muted">2 Feb 2023 09:03</td>
+               <td class="text-muted">02/02/2023 09:03</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
                  <a href="#" title="Re-activate user" ><i class="fal fa-user-check fs-2 fa-fw"></i></a>
@@ -51,7 +51,7 @@ title: Users
                <td>gerald@example.com</td>
                <td>Setting user</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
-               <td>13 Feb 2023 16:42</td>
+               <td>13/02/2023 16:42</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
                  <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
@@ -62,7 +62,7 @@ title: Users
                <td>mehul@example.com</td>
                <td>Co-ordinator</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
-               <td>31 Jan 2023 12:11</td>
+               <td>31/01/2023 12:11</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
                  <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
@@ -84,7 +84,7 @@ title: Users
                <td>sally@example.com</td>
                <td>Contributor</td>
                <td><span class="badge text-bg-success w-100">Active</span></td>
-               <td>9 Mar 2022 20:59</td>
+               <td>09/03/2022 20:59</td>
                <td class="no-wrap">
                  <a href="#" title="Edit user" class="me-3"><i class="fal fa-user-edit fs-2 fa-fw"></i></a>
                  <a href="#" title="Suspend user" ><i class="fal fa-user-slash fs-2 fa-fw"></i></a>
