--- a/work-tray/index.html
+++ b/work-tray/index.html
@@ -41,7 +41,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">Year 9</td>
                      <td>Highfield Academy</td>
                      <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A needs assessment is in progress">Assessment</span></td>
-                     <td class="d-none d-md-table-cell">17 Apr 2023</td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
                    <tr>
@@ -50,7 +50,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">Year 4</td>
                      <td>Oak Junior School</td>
                      <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="A draft EHC Plan is in writing">Drafting EHCP</span></td>
-                     <td class="d-none d-md-table-cell">14 Jan 2023</td>
+                     <td class="d-none d-md-table-cell">14/01/2023</td>
                      <td class="d-none d-md-table-cell">
                        <span class="badge rounded-pill bg-warning-300 text-dark" data-bs-toggle="tooltip" data-bs-title="Next due date is pending">Pending deadline</span>
                        <span class="badge rounded-pill bg-error-600" title="Safeguarding concern" data-bs-toggle="tooltip" data-bs-title="Safeguarding">SG</span>
@@ -63,7 +63,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">Year 2</td>
                      <td>St Mary's Primary</td>
                      <td><span class="badge text-neutral-600 bg-warning-100 w-100" data-bs-toggle="tooltip" data-bs-title="A proposed amendment outside review is in writing">Drafting amendment</span></td>
-                     <td class="d-none d-md-table-cell">17 Apr 2023</td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
                    <tr>
@@ -72,7 +72,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">Year 13</td>
                      <td>Greenhill School</td>
                      <td><span class="badge text-neutral-600 bg-secondary-100 w-100" data-bs-toggle="tooltip" data-bs-title="Information gathering following a request for assessment">Information gathering</span></td>
-                     <td class="d-none d-md-table-cell">17 Apr 2023</td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"><span class="badge rounded-pill bg-danger" data-bs-toggle="tooltip" data-bs-title="Next due date is overdue">Overdue deadline</span></td>
                    </tr>
                    <tr>
@@ -81,7 +81,7 @@ title: Work tray
                      <td class="d-none d-md-table-cell">Year 11</td>
                      <td>Greenhill School</td>
                      <td><span class="badge text-neutral-600 bg-error-100 w-100" data-bs-toggle="tooltip" data-bs-title="A review meeting has been arranged and gathering views">Review arranged</span></td>
-                     <td class="d-none d-md-table-cell">17 Apr 2023</td>
+                     <td class="d-none d-md-table-cell">17/04/2023</td>
                      <td class="d-none d-md-table-cell"></td>
                    </tr>
                  </tbody>
