Added cookie message

--- a/index.html
+++ b/index.html
@@ -34,6 +34,17 @@ title: EHC Hub
 			<p><a href="anon">Request needs assessment</a></p>
 		</main>
 
+		<div class="fixed-message">
+			<div class="card">
+			  <div class="card-body">
+			    <p class="card-text">
+						<i class="fal fa-info-circle"></i> This website uses cookies to ensure that you get the best experience.
+					</p>
+			    <a href="#" class="btn btn-neutral-50 w-100">OK</a>
+			  </div>
+			</div>
+		</div>
+
 	</div>
 
 </div>
