Correct typo in user profile
Changed "Phone" to "Post".

--- a/user-profile/index.html
+++ b/user-profile/index.html
@@ -73,8 +73,8 @@ title: EHC Hub
                       <label class="form-check-label" for="exampleCheck1">Email</label>
                     </div>
                     <div class="mb-3 form-check-inline">
-                      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                      <label class="form-check-label" for="exampleCheck1">Phone</label>
+                      <input type="checkbox" class="form-check-input" id="exampleCheck2">
+                      <label class="form-check-label" for="exampleCheck2">Post</label>
                     </div>
                   </div>
                 </div>
